# qwen-qlora-sql-benchmark

./: .gitignore  README.md  pyproject.toml  requirements-kaggle.txt
configs/: benchmark_vllm.yaml  dataset_sql_create_context.yaml  eval.yaml  eval_lora_r16.yaml  eval_lora_r16_diagnostic.yaml  eval_lora_r32.yaml  eval_lora_r32_diagnostic.yaml  eval_lora_r8.yaml  eval_lora_r8_diagnostic.yaml  train_baseline.yaml  train_lora_r16.yaml  train_lora_r16_diagnostic.yaml  train_lora_r32.yaml  train_lora_r32_diagnostic.yaml  train_lora_r8.yaml  train_lora_r8_diagnostic.yaml
docs/: BENCHMARK_ANALYSIS.md  BENCHMARK_SPEC.md  DATASET_ANALYSIS.md  DATASET_SPEC.md  DEPLOYMENT_EVAL.md  DEPLOYMENT_READINESS.md  ERROR_ANALYSIS.md  EVAL_ANALYSIS.md  EVAL_SPEC.md  EXECUTION_EVAL.md  EXPERIMENT_LOG.md  HUGGING_FACE_PACKAGING.md  KAGGLE_REPRODUCTION.md  KAGGLE_VALIDATION.md  PROJECT_PLAN.md  REPRODUCTION.md  RESULTS_SUMMARY.md  TECHNICAL_REPORT.md  TRAINING_SPEC.md
examples/: demo_request.json
notebooks/: 01_kaggle_setup_check.ipynb  02_data_preview.ipynb
scripts/: analyze_errors.sh  baseline_generate.sh  demo_request.sh  eval_r8.sh  hf_upload_adapter.sh  kaggle_eval_r16.sh  kaggle_eval_r32.sh  kaggle_prepare_dataset.sh  kaggle_setup_check.sh  local_eval_r16.sh  local_eval_r16_diagnostic.sh  local_eval_r32.sh  local_eval_r32_diagnostic.sh  local_eval_r8.sh  local_eval_r8_diagnostic.sh  local_train_r16_diagnostic.sh  local_train_r32_diagnostic.sh  local_train_r8_diagnostic.sh  plot_results.sh  run_api.sh  run_deployment_eval.sh  run_execution_eval.sh  run_local_demo.sh  train_r16.sh  (+4 more)
(+69 files in other folders)
