[project]
name = "qwen-qlora-sql-benchmark"
version = "0.1.0"
description = "Reproducible QLoRA and serving benchmark pipeline for Qwen Text-to-SQL experiments."
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0.1",
  "pandas>=2.0.0",
  "matplotlib>=3.8.0",
  "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]
kaggle = [
  "accelerate>=0.33.0",
  "bitsandbytes>=0.43.0",
  "datasets>=2.20.0",
  "evaluate>=0.4.2",
  "peft>=0.12.0",
  "psutil>=5.9.0",
  "torch>=2.3.0",
  "transformers>=4.44.0",
  "trl>=0.9.6",
  "vllm>=0.5.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
